# Buddhabrot

./: CMakeLists.txt  README.md  compile_commands.json
.ccls-cache/@@Users@carlobonandrini@develop@Buddhabrot/: @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@Availability.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@AvailabilityInternal.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@TargetConditionals.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@__wctype.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_ctype.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_locale.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_stdio.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_types.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_types@_intmax_t.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_types@_nl_item.h.blob  (+364 more)
.ccls-cache/@Users@carlobonandrini@develop@Buddhabrot/: src@Buddhabrot.cpp.blob
src/: Buddhabrot.cpp
